--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.pickle filter=lfs diff=lfs merge=lfs -text
 tuned_model2013 filter=lfs diff=lfs merge=lfs -text
 tuned_model2015 filter=lfs diff=lfs merge=lfs -text
+tuned_model2017 filter=lfs diff=lfs merge=lfs -text
