--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 tuned_model2013 filter=lfs diff=lfs merge=lfs -text
 tuned_model2015 filter=lfs diff=lfs merge=lfs -text
 tuned_model2017 filter=lfs diff=lfs merge=lfs -text
+tuned_model2016 filter=lfs diff=lfs merge=lfs -text
